--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,9 @@ header{
 display: flex;
 flex-direction: column;
 width: 100%;
-text-align: center;
+/* text-align: center; */
 }
-nav {
+/* nav {
  
     background-color: white;
 }
@@ -31,7 +31,7 @@ nav li{
     
     list-style: none;
     background-color: #E2E2E2;
-    /* margin-bottom: 2px; */
+
     display: block;
     height: 30px;
     line-height: 30px;
@@ -43,7 +43,151 @@ nav li{
 nav h1{
     padding-bottom: 1em;
     color: #D87922;
+} */
+
+
+
+.burger-check {
+	display: none;
 }
+
+/*----------------------------------------------------
+ Définit la zone d'action pour le burger
+ incluant une étiquette pour la facilité d'utilisation
+----------------------------------------------------*/
+.burger {
+	position: relative;
+	float: left;
+	margin-left: 10px;
+	width: 60px;
+	height: 60px;
+	cursor: pointer;
+}
+
+nav {	
+	position: relative;
+	float: left;
+	width: 100%;
+	margin: 0;
+	min-height: 50px;
+	background: #eee;
+	overflow: hidden;
+}
+/*==============================================================================
+ Apparence du menu
+==============================================================================*/
+/*--------------------------------------------------
+ Crée l'apparence de l'icône du hamburger
+ en utilisant le span interne et les pseudo-éléments
+--------------------------------------------------*/
+.burger span,
+.burger span:before,
+.burger span:after {
+	position: absolute;
+	content: '';
+	top: 22px;
+	width: 40px;
+	height: 4px;
+	background: #333;
+	border-radius: 0.2em;
+}
+/*------------------------------
+ Position de la barre supérieure
+------------------------------*/
+.burger span:before {
+	top: -8px;
+}
+/*------------------------------
+ Position de la barre inférieure
+------------------------------*/
+.burger span:after {
+	top: 8px;
+}
+/*==============================================================================
+ Animation du menu
+==============================================================================*/
+/*----------------------------------------------
+ Définit la	durée de tous les effets d'animation
+----------------------------------------------*/
+*,
+*:before,
+*:after {
+	transition: all 0.3s;
+}
+/*----------------------------------------------
+ Suppression de la barre centrale sur le "check"
+----------------------------------------------*/
+.burger-check:checked + .burger span {
+	height: -1;
+	width: 0;
+}
+/*-------------------------------------------------------------------
+ Déplace les barres supérieure et inférieure au milieu sur le "check"
+-------------------------------------------------------------------*/
+.burger-check:checked + .burger span:before,
+.burger-check:checked + .burger span:after {
+	top: 6px;
+}
+
+/*----------------------------------------------
+ Fait pivoter la barre supérieure sur le "check"
+----------------------------------------------*/
+.burger-check:checked + .burger span:before {
+	transform: rotate(45deg);
+}
+/*--------------------------------------------
+ Fait pivoter la barre inférieure sur le check
+--------------------------------------------*/
+.burger-check:checked + .burger span:after {
+	transform: rotate(-45deg);
+}
+/*==============================================================================
+ Ajout des items du menu
+==============================================================================*/
+nav ul {
+	position: relative;
+	float: left;
+	width: 100%;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav ul a {
+	position: relative;
+	float: left;
+	width: 100%;
+	height: 0;
+	line-height: 50px;
+	padding: 0 15px;
+	text-decoration: none;
+	overflow: hidden;
+	color: #333;
+	text-align: left;
+}
+.logo-text , h1{
+    text-align: center;
+}
+
+/* Définir la hauteur de l'élément 'a' afin de faire apparaître le menu lors du "check"  */
+#main-nav:checked ~ ul a {
+	height: 50px;
+}
+/*------------------------------------------------------
+ Si l'on souhaite que le menu ne repousse pas le contenu
+ il faut décommenter le bloc suivant
+------------------------------------------------------*/
+header {
+	
+    display: flex;
+    flex-direction: column-reverse;
+}
+header nav{
+ 
+  	z-index:10;
+  	float: left;
+}
+
 
 h1{
     color: #A55122;
@@ -81,22 +225,39 @@ article{
     flex-direction: column;
     align-items: center;
 }
+/* .partie-gauche p {
+    font-size: 5vw;
+} */
 
 /*media querie tablette*/
 
 @media screen and (min-width: 768px){
-    nav{
+    nav {
    padding: 0 2em;
+   background-color: white;
+
+   
        
     }
-   nav ul{
+
+   nav ul {
+ 
     display: flex;
     justify-content: center;
+    
 
     }
+
    nav li{
+    list-style: none;
         width: 80%;
        
+    }
+    .burger {
+        display: none;
+    }
+    nav ul a {
+        height: fit-content;
     }
     article{
         width: 100%;
@@ -179,18 +340,24 @@ article{
     
     }
     nav{
+        padding: unset;
         width: 50%;
+        border: solid red 2px;
     }
     nav ul{
+        
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-end;
        
 
     }
+
     ul li{
+
         background-color: white;
-        
+        white-space: nowrap;
+    
     }
     header ul li{
         font-weight: bold;
